Updated for Java 10 and IntelliJ. Added the Cheatsheet file.