@@ -30,7 +30,6 @@ public class J_Maps {
     /**
      * Given a map whose keys are Integers and whose values are Strings,
      * set each value to upper case.
-     * You can check the Map.replaceAll() method.
      */
     @Test
     public void j_map01() {
@@ -53,7 +52,6 @@ public class J_Maps {
      * This is a problem, because if we call get() on a key that isn't present, it returns
      * null, and we need to add checks to protect against NullPointerException.
      * Write code to ensure that all missing keys are mapped to the empty string.
-     * You can check the Map.putIfAbsent() method.
      */
     @Test
     public void j_map02() {
@@ -71,13 +69,13 @@ public class J_Maps {
 
         assertThat(map).hasSize(7);
         assertThat(map)
-                .contains(new AbstractMap.SimpleEntry<>("a", "alfa"))
-                .contains(new AbstractMap.SimpleEntry<>("b", "bravo"))
-                .contains(new AbstractMap.SimpleEntry<>("c", "charlie"))
-                .contains(new AbstractMap.SimpleEntry<>("d", "delta"))
-                .contains(new AbstractMap.SimpleEntry<>("e", ""))
-                .contains(new AbstractMap.SimpleEntry<>("f", ""))
-                .contains(new AbstractMap.SimpleEntry<>("g", ""));
+                .contains(Map.entry("a", "alfa"))
+                .contains(Map.entry("b", "bravo"))
+                .contains(Map.entry("c", "charlie"))
+                .contains(Map.entry("d", "delta"))
+                .contains(Map.entry("e", ""))
+                .contains(Map.entry("f", ""))
+                .contains(Map.entry("g", ""));
     }
 
 
@@ -85,7 +83,6 @@ public class J_Maps {
      * In the previous example, we added map entries that had a default value.
      * We've now determined that's incorrect, and we want to undo that. This
      * time, we want to remove the entry if the value is the empty string.
-     * You can check one of the Map.remove() method.
      */
     @Test
     public void j_map03() {
@@ -105,10 +102,10 @@ public class J_Maps {
 
         assertThat(map).hasSize(4);
         assertThat(map)
-                .contains(new AbstractMap.SimpleEntry<>("a", "alfa"))
-                .contains(new AbstractMap.SimpleEntry<>("b", "bravo"))
-                .contains(new AbstractMap.SimpleEntry<>("c", "charlie"))
-                .contains(new AbstractMap.SimpleEntry<>("d", "delta"));
+                .contains(Map.entry("a", "alfa"))
+                .contains(Map.entry("b", "bravo"))
+                .contains(Map.entry("c", "charlie"))
+                .contains(Map.entry("d", "delta"));
     }
 
     /**
@@ -116,7 +113,6 @@ public class J_Maps {
      * Instead of removing entries whose value is the empty string, we want
      * to replace the empty-string values with a value that's the key itself.
      * Write the code to do that.
-     * You can check one of the Map.replace() method.
      */
     @Test
     public void j_map04() {
@@ -136,13 +132,13 @@ public class J_Maps {
 
         assertThat(map).hasSize(7);
         assertThat(map)
-                .contains(new AbstractMap.SimpleEntry<>("a", "alfa"))
-                .contains(new AbstractMap.SimpleEntry<>("b", "bravo"))
-                .contains(new AbstractMap.SimpleEntry<>("c", "charlie"))
-                .contains(new AbstractMap.SimpleEntry<>("d", "delta"))
-                .contains(new AbstractMap.SimpleEntry<>("e", "e"))
-                .contains(new AbstractMap.SimpleEntry<>("f", "f"))
-                .contains(new AbstractMap.SimpleEntry<>("g", "g"));
+                .contains(Map.entry("a", "alfa"))
+                .contains(Map.entry("b", "bravo"))
+                .contains(Map.entry("c", "charlie"))
+                .contains(Map.entry("d", "delta"))
+                .contains(Map.entry("e", "e"))
+                .contains(Map.entry("f", "f"))
+                .contains(Map.entry("g", "g"));
     }
 
     /**
@@ -150,7 +146,6 @@ public class J_Maps {
      * are present, we want to convert the value to upper case; and for keys
      * that are not present, we want to add an entry where the value is the
      * same as the key.
-     * You can check the Map.compute() method.
      */
     @Test
     public void j_map05() {
@@ -167,13 +162,13 @@ public class J_Maps {
 
         assertThat(map).hasSize(7);
         assertThat(map)
-                .contains(new AbstractMap.SimpleEntry<>("a", "ALFA"))
-                .contains(new AbstractMap.SimpleEntry<>("b", "BRAVO"))
-                .contains(new AbstractMap.SimpleEntry<>("c", "CHARLIE"))
-                .contains(new AbstractMap.SimpleEntry<>("d", "DELTA"))
-                .contains(new AbstractMap.SimpleEntry<>("e", "e"))
-                .contains(new AbstractMap.SimpleEntry<>("f", "f"))
-                .contains(new AbstractMap.SimpleEntry<>("g", "g"));
+                .contains(Map.entry("a", "ALFA"))
+                .contains(Map.entry("b", "BRAVO"))
+                .contains(Map.entry("c", "CHARLIE"))
+                .contains(Map.entry("d", "DELTA"))
+                .contains(Map.entry("e", "e"))
+                .contains(Map.entry("f", "f"))
+                .contains(Map.entry("g", "g"));
     }
 
     /**
@@ -181,7 +176,6 @@ public class J_Maps {
      * with values that are the empty string. This time, we want to convert
      * the non-empty values to upper case, but we want to remove the entries
      * for which the values are the empty string.
-     * You can check the Map.compute() method.
      */
     @Test
     public void j_map06() {
@@ -201,16 +195,15 @@ public class J_Maps {
 
         assertThat(map).hasSize(4);
         assertThat(map)
-                .contains(new AbstractMap.SimpleEntry<>("a", "ALFA"))
-                .contains(new AbstractMap.SimpleEntry<>("b", "BRAVO"))
-                .contains(new AbstractMap.SimpleEntry<>("c", "CHARLIE"))
-                .contains(new AbstractMap.SimpleEntry<>("d", "DELTA"));
+                .contains(Map.entry("a", "ALFA"))
+                .contains(Map.entry("b", "BRAVO"))
+                .contains(Map.entry("c", "CHARLIE"))
+                .contains(Map.entry("d", "DELTA"));
     }
 
     /**
      * Given a list of words, populate a map whose keys are the lengths of
      * each word, and whose values are list of words with that length.
-     * You can check the Map.computeIfAbsent() method.
      */
     @Test
     public void j_map07() {
@@ -225,9 +218,9 @@ public class J_Maps {
         assertThat(result).hasSize(3);
         assertThat(result).containsKeys(3, 4, 5);
         assertThat(result)
-                .contains(new AbstractMap.SimpleEntry<>(3, Arrays.asList("one", "two", "six", "ten")))
-                .contains(new AbstractMap.SimpleEntry<>(4, Arrays.asList("four", "five", "nine")))
-                .contains(new AbstractMap.SimpleEntry<>(5, Arrays.asList("three", "seven", "eight")));
+                .contains(Map.entry(3, List.of("one", "two", "six", "ten")))
+                .contains(Map.entry(4, List.of("four", "five", "nine")))
+                .contains(Map.entry(5, List.of("three", "seven", "eight")));
     }
 
     /**
@@ -239,7 +232,6 @@ public class J_Maps {
      * s -> 3 -> {six}
      * 5 -> {seven}
      * etc...
-     * You can check the Map.computeIfAbsent() method.
      */
     @Test
     public void j_map08() {
@@ -258,25 +250,24 @@ public class J_Maps {
         assertThat(result).hasSize(6);
         assertThat(result).containsKeys("e", "f", "n", "o", "s", "t");
         assertThat(result.get("e"))
-                .contains(new AbstractMap.SimpleEntry<>(5, Arrays.asList("eight")));
+                .contains(Map.entry(5, List.of("eight")));
         assertThat(result.get("f"))
-                .contains(new AbstractMap.SimpleEntry<>(4, Arrays.asList("four", "five")));
+                .contains(Map.entry(4, List.of("four", "five")));
         assertThat(result.get("n"))
-                .contains(new AbstractMap.SimpleEntry<>(4, Arrays.asList("nine")));
+                .contains(Map.entry(4, List.of("nine")));
         assertThat(result.get("o"))
-                .contains(new AbstractMap.SimpleEntry<>(3, Arrays.asList("one")));
+                .contains(Map.entry(3, List.of("one")));
         assertThat(result.get("s"))
-                .contains(new AbstractMap.SimpleEntry<>(3, Arrays.asList("six")))
-                .contains(new AbstractMap.SimpleEntry<>(5, Arrays.asList("seven")));
+                .contains(Map.entry(3, List.of("six")))
+                .contains(Map.entry(5, List.of("seven")));
         assertThat(result.get("t"))
-                .contains(new AbstractMap.SimpleEntry<>(3, Arrays.asList("two", "ten")))
-                .contains(new AbstractMap.SimpleEntry<>(5, Arrays.asList("three")));
+                .contains(Map.entry(3, List.of("two", "ten")))
+                .contains(Map.entry(5, List.of("three")));
     }
 
     /**
      * Given a list of words, populate a map whose keys are the lengths of each word, and whose values
      * the concatenation of words with that length, separated by a space.
-     * You can check the Map.merge() method.
      */
     @Test
     public void j_map09() {
@@ -291,9 +282,9 @@ public class J_Maps {
         assertThat(result).hasSize(3);
         assertThat(result).containsKeys(3, 4, 5);
         assertThat(result)
-                .contains(new AbstractMap.SimpleEntry<>(3, "one two six ten"))
-                .contains(new AbstractMap.SimpleEntry<>(4, "four five nine"))
-                .contains(new AbstractMap.SimpleEntry<>(5, "three seven eight"));
+                .contains(Map.entry(3, "one two six ten"))
+                .contains(Map.entry(4, "four five nine"))
+                .contains(Map.entry(5, "three seven eight"));
     }
 
     /**
@@ -306,7 +297,6 @@ public class J_Maps {
      * s -> 3 -> "six"
      * 5 -> "seven"
      * etc...
-     * You can check the Map.computeIfAbsent() and the Map.merge() methods.
      */
     @Test
     public void j_map10() {
@@ -323,19 +313,19 @@ public class J_Maps {
         assertThat(result).hasSize(6);
         assertThat(result).containsKeys("e", "f", "n", "o", "s", "t");
         assertThat(result.get("e"))
-                .contains(new AbstractMap.SimpleEntry<>(5, "eight"));
+                .contains(Map.entry(5, "eight"));
         assertThat(result.get("f"))
-                .contains(new AbstractMap.SimpleEntry<>(4, "four five"));
+                .contains(Map.entry(4, "four five"));
         assertThat(result.get("n"))
-                .contains(new AbstractMap.SimpleEntry<>(4, "nine"));
+                .contains(Map.entry(4, "nine"));
         assertThat(result.get("o"))
-                .contains(new AbstractMap.SimpleEntry<>(3, "one"));
+                .contains(Map.entry(3, "one"));
         assertThat(result.get("s"))
-                .contains(new AbstractMap.SimpleEntry<>(3, "six"))
-                .contains(new AbstractMap.SimpleEntry<>(5, "seven"));
+                .contains(Map.entry(3, "six"))
+                .contains(Map.entry(5, "seven"));
         assertThat(result.get("t"))
-                .contains(new AbstractMap.SimpleEntry<>(3, "two ten"))
-                .contains(new AbstractMap.SimpleEntry<>(5, "three"));
+                .contains(Map.entry(3, "two ten"))
+                .contains(Map.entry(5, "three"));
     }
 
 }
